# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-04-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add url-path RequestInfo parameter so that
      service name parsing isn't necessary
    * Add cloudi_service_filesystem interface functions
      notify_all, notify_one, notify_clear to receive
      file update notifications

2014-04-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update syslog dependency source

2014-03-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add process_index, process_count, process_count_max, and
      process_count_min to all CloudI API implementations

2014-03-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix ec2 discovery groups/tags validation for syntax additions

2014-03-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update nodefinder to add support for boolean expressions when using
      ec2 with tags and/or groups
    * Enforce a minimum node reconnect time based
      on the configured net_kernel:connecttime/0

2014-03-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service_api:nodes_set/2 for dynamically configuring
      CloudI nodes configuration

2014-03-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add more flexible nodes configuration
    * Update nodefinder (a rewrite) and remove the older nodefinder cruft
    * Support EC2 Erlang node auto-discovery based on
      security groups and/or tags
    * Move external Erlang dependencies into directories with
      cloudi_x_ prefix so that include_lib can be used without problems
    * Add the ability to change the distributed Erlang node connection type
      with the listen and connect nodes configuration options
    * Make configuration changes to the listen and connect nodes configuration
      options reset the configuration of cpg and nodefinder

2014-03-06 Michael Truog   <mjtruog [at] gmail (dot) com>
