@@ -392,7 +392,8 @@
         cloudi_service_filesystem,
         [{directory, "tests/http_req/public_html/"},
          {refresh, 5}, % seconds
-         {cache, 300} % seconds
+         {cache, 300}, % seconds
+         {notify_one, [{"/tests/http_req/index.html/get", "/tests/echo/put"}]}
          ],
         immediate_closest,
         5000, 5000, 5000, undefined, undefined, 1, 5, 300, []},
